--- a/index.html
+++ b/index.html
@@ -1,11 +1,111 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Coming soon</title>
+    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="./assets/css/style.css" rel="stylesheet" />
   </head>
-  <body>
-    <h1>Coming soon</h1>
+  <body class="theme-rp">
+    <header>
+      <nav>
+        <ul>
+          <a href="#"><li>About Me</li></a>
+          <a href="#myprojects"><li>My Projects</li></a>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="row">
+        <div id="aboutme" class="card">
+          <img src="./assets/img/IMG_0569.jpg" alt="" />
+          <h1>Hi, I'm Ahmad Foresta</h1>
+          <p>
+            Just a computer science student with a passion for technology. I
+            have an interest in infrastructure, particularly in areas of
+            computer networking, cloud computing, and security. I’m also
+            enthusiastic about machine learning.
+          </p>
+          <p>
+            <a href="https://github.com/estaesta" target="_blank">My Github</a>
+            |
+            <a href="https://linkedin.com/in/ahmad-foresta" target="_blank"
+              >My Linkedin
+            </a>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <h2 id="myprojects">My Projects</h2>
+      </div>
+      <div class="row">
+        <div id="arrow">
+          <a href="#myprojects">
+            <!-- make arrow down svg -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="65"
+              height="65"
+              fill="currentColor"
+              class="bi bi-arrow-down-circle"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="row project">
+        <div class="proj-desc">
+          <h3>Naztama Bumi Raya unofficial company website</h3>
+          <p>
+            Learning html with tailwindcss and alpinejs. Deployed website can be
+            accessed on
+            <a href="https://naztamabumiraya.pages.dev" target="_blank"
+              >https://naztamabumiraya.pages.dev</a
+            >
+          </p>
+        </div>
+        <div class="card ">
+          <a href="https://naztamabumiraya.pages.dev" target="_blank">
+            <img src="./assets/img/naztama.png" alt="" />
+          </a>
+        </div>
+      </div>
+      <div class="row project">
+        <div class="card ">
+          <a href="https://ddpaud.pages.dev" target="_blank">
+            <img src="./assets/img/ddpaudblog.png" alt="" />
+          </a>
+        </div>
+        <div class="proj-desc">
+          <h3>Personal Blog</h3>
+          <p>
+            My personal blog. Built using Zola static site generator. Can be
+            accessed on
+            <a href="https://ddpaud.pages.dev" target="_blank"
+              >https://ddpaud.pages.dev</a
+            >
+          </p>
+        </div>
+      </div>
+      <div class="row project">
+        <div class="proj-desc">
+          <h3>Heartbeat prediction</h3>
+          <p>
+            My college research about implementing heartbeat prediction using
+            LSTM based model. Built using tensorflow and flask.
+          </p>
+        </div>
+        <div class="card ">
+          <img src="./assets/img/lstm2.png" alt="" />
+        </div>
+      </div>
+    </main>
+    <footer>Ahmad Foresta &copy; 2023</footer>
   </body>
+  <script src="./assets/js/script.js"></script>
 </html>
