--- a/index.html
+++ b/index.html
@@ -38,6 +38,115 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div id="" class="card">
+          <h2>My Skills</h2>
+          <div class="skills">
+            <img src="https://skillicons.dev/icons?i=go" alt="go" title="go" />
+            <img
+              src="https://skillicons.dev/icons?i=python"
+              alt="python"
+              title="python"
+            />
+            <img src="https://skillicons.dev/icons?i=js" alt="js" title="js" />
+            <img
+              src="https://skillicons.dev/icons?i=html"
+              alt="html"
+              title="html"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=css"
+              alt="css"
+              title="css"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=tailwind"
+              alt="tailwind"
+              title="tailwind"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=htmx"
+              alt="htmx"
+              title="htmx"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=mysql"
+              alt="mysql"
+              title="mysql"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=postgres"
+              alt="postgres"
+              title="postgres"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=linux"
+              alt="linux"
+              title="linux"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=ansible"
+              alt="ansible"
+              title="ansible"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=git"
+              alt="git"
+              title="git"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=gcp"
+              alt="gcp"
+              title="gcp"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=aws"
+              alt="aws"
+              title="aws"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=terraform"
+              alt="terraform"
+              title="terraform"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=jenkins"
+              alt="jenkins"
+              title="jenkins"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=docker"
+              alt="docker"
+              title="docker"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=kubernetes"
+              alt="kubernetes"
+              title="kubernetes"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=neovim"
+              alt="neovim"
+              title="neovim"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=flask"
+              alt="flask"
+              title="flask"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=tensorflow"
+              alt="tensorflow"
+              title="tensorflow"
+            />
+            <img
+              src="https://skillicons.dev/icons?i=sklearn"
+              alt="sklearn"
+              title="sklearn"
+            />
+          </div>
+        </div>
+      </div>
       <a class="anchor" id="myprojects-anchor">myprojects</a>
       <div class="row">
         <h2 id="myprojects">My Projects</h2>
